# sidecrab

./: .gitignore  ACKNOWLEDGEMENTS.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-10-clawd-pet.md  2026-07-10-sidecrab.md
docs/superpowers/specs/: 2026-07-10-clawd-pet-design.md  2026-07-10-sidecrab-design.md
src/: behavior.js  frames.js  index.html  input.js  main.js  sprites.js  state-machine.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/hook/: Cargo.toml
src-tauri/hook/src/: main.rs
src-tauri/hook/tests/: hook.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  hook_installer.rs  idle_monitor.rs  lib.rs  main.rs  os_actions.rs  paths.rs  state_watcher.rs
src-tauri/tests/: config.rs  hook.rs  installer.rs
